--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,9 @@ body {
     height: 100%;
     padding: 0;
     margin: 0;
+    min-height: 100vh;
 }
 
 * {
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Manrope', sans-serif !important;
 }
