--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
-
+@import 'react-big-calendar/lib/css/react-big-calendar.css';
 html *::-webkit-scrollbar {
     border-radius: 0;
     width: 8px;
