--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 @import 'react-big-calendar/lib/css/react-big-calendar.css';
+@import "react-slideshow-image/dist/styles.css";
+
 html *::-webkit-scrollbar {
     border-radius: 0;
     width: 8px;
